--- a/css/player.css
+++ b/css/player.css
@@ -66,12 +66,14 @@ main {
     width: 36px;
     height: 36px;
     padding: 0;
-    display: inline-flex;
+    display: flex;
     align-items: center;
     justify-content: center;
     flex-shrink: 0;
     font-size: 14px;
     font-weight: 500;
+    line-height: 1;
+    box-sizing: border-box;
 }
 
 .episode-btn:hover {
@@ -107,6 +109,7 @@ main {
         width: 32px;
         height: 32px;
         font-size: 12px;
+        line-height: 1;
     }
     
     .episode-grid {
